HHH-5138 - Redesign types + introduce TypeRegistry & TypeResolver
git-svn-id: https://svn.jboss.org/repos/hibernate/core/trunk@19335 1b8cb986-b30d-0410-93ca-fae66ebed9b2