@@ -1,10 +1,10 @@
 /*
  * Hibernate, Relational Persistence for Idiomatic Java
  *
- * Copyright (c) 2008, Red Hat Middleware LLC or third-party contributors as
+ * Copyright (c) 2010, Red Hat Inc. or third-party contributors as
  * indicated by the @author tags or express copyright attribution
  * statements applied by the authors.  All third-party contributions are
- * distributed under license by Red Hat Middleware LLC.
+ * distributed under license by Red Hat Inc.
  *
  * This copyrighted material is made available to anyone wishing to use, modify,
  * copy, or redistribute it subject to the terms and conditions of the GNU
@@ -20,80 +20,71 @@
  * Free Software Foundation, Inc.
  * 51 Franklin Street, Fifth Floor
  * Boston, MA  02110-1301  USA
- *
  */
 package org.hibernate.type;
 
 import java.io.Serializable;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.sql.Types;
 import java.util.Comparator;
 
-import org.hibernate.util.ComparableComparator;
 import org.hibernate.dialect.Dialect;
 import org.hibernate.engine.SessionImplementor;
+import org.hibernate.type.descriptor.java.LongTypeDescriptor;
+import org.hibernate.type.descriptor.sql.BigIntTypeDescriptor;
 
 /**
- * <tt>long</tt>: A type that maps an SQL BIGINT to a Java Long.
+ * A type that maps between {@link java.sql.Types#BIGINT BIGINT} and {@link Long}
+ *
  * @author Gavin King
+ * @author Steve Ebersole
  */
-public class LongType extends PrimitiveType implements DiscriminatorType, VersionType {
+public class LongType
+		extends AbstractSingleColumnStandardBasicType<Long>
+		implements PrimitiveType<Long>, DiscriminatorType<Long>, VersionType<Long> {
 
-	private static final Long ZERO = new Long(0);
+	public static final LongType INSTANCE = new LongType();
+
+	@SuppressWarnings({ "UnnecessaryBoxing" })
+	private static final Long ZERO = Long.valueOf( 0 );
+
+	public LongType() {
+		super( BigIntTypeDescriptor.INSTANCE, LongTypeDescriptor.INSTANCE );
+	}
+
+	public String getName() {
+		return "long";
+	}
+
+	@Override
+	public String[] getRegistrationKeys() {
+		return new String[] { getName(), long.class.getName(), Long.class.getName() };
+	}
 
 	public Serializable getDefaultValue() {
 		return ZERO;
-	}
-	
-	public Object get(ResultSet rs, String name) throws SQLException {
-		return new Long( rs.getLong(name) );
 	}
 
 	public Class getPrimitiveClass() {
 		return long.class;
 	}
 
-	public Class getReturnedClass() {
-		return Long.class;
-	}
-
-	public void set(PreparedStatement st, Object value, int index)
-	throws SQLException {
-
-		st.setLong( index, ( (Long) value ).longValue() );
-	}
-
-	public int sqlType() {
-		return Types.BIGINT;
-	}
-
-	public String getName() { return "long"; }
-
-	public Object stringToObject(String xml) throws Exception {
+	public Long stringToObject(String xml) throws Exception {
 		return new Long(xml);
 	}
 
-	public Object next(Object current, SessionImplementor session) {
-		return new Long( ( (Long) current ).longValue() + 1 );
+	@SuppressWarnings({ "UnnecessaryBoxing", "UnnecessaryUnboxing" })
+	public Long next(Long current, SessionImplementor session) {
+		return Long.valueOf( current.longValue() + 1 );
 	}
 
-	public Object seed(SessionImplementor session) {
+	public Long seed(SessionImplementor session) {
 		return ZERO;
 	}
 
-	public Comparator getComparator() {
-		return ComparableComparator.INSTANCE;
+	public Comparator<Long> getComparator() {
+		return getJavaTypeDescriptor().getComparator();
 	}
 	
-	public String objectToSQLString(Object value, Dialect dialect) throws Exception {
+	public String objectToSQLString(Long value, Dialect dialect) throws Exception {
 		return value.toString();
 	}
-
-	public Object fromStringValue(String xml) {
-		return new Long(xml);
-	}
-
-
 }
